; ModuleID = '/home/carl/AnghaBench/freebsd/sys/fs/tmpfs/extr_tmpfs_subr.c_tmpfs_dir_xlookup_hash.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/fs/tmpfs/extr_tmpfs_subr.c_tmpfs_dir_xlookup_hash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tmpfs_dirent = type { i32 }
%struct.tmpfs_node = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@tmpfs_dir = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.tmpfs_dirent* (%struct.tmpfs_node*, i32)* @tmpfs_dir_xlookup_hash to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.tmpfs_dirent* @tmpfs_dir_xlookup_hash(%struct.tmpfs_node* %0, i32 %1) #0 {
  %3 = alloca %struct.tmpfs_node*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.tmpfs_dirent*, align 8
  %6 = alloca %struct.tmpfs_dirent, align 4
  store %struct.tmpfs_node* %0, %struct.tmpfs_node** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = getelementptr inbounds %struct.tmpfs_dirent, %struct.tmpfs_dirent* %6, i32 0, i32 0
  store i32 %7, i32* %8, align 4
  %9 = load i32, i32* @tmpfs_dir, align 4
  %10 = load %struct.tmpfs_node*, %struct.tmpfs_node** %3, align 8
  %11 = getelementptr inbounds %struct.tmpfs_node, %struct.tmpfs_node* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = call %struct.tmpfs_dirent* @RB_FIND(i32 %9, i32* %12, %struct.tmpfs_dirent* %6)
  store %struct.tmpfs_dirent* %13, %struct.tmpfs_dirent** %5, align 8
  %14 = load %struct.tmpfs_dirent*, %struct.tmpfs_dirent** %5, align 8
  ret %struct.tmpfs_dirent* %14
}

declare dso_local %struct.tmpfs_dirent* @RB_FIND(i32, i32*, %struct.tmpfs_dirent*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
